<resources>
    <string name="app_name">Parc</string>
    <string name="activity_preferences">Preferences</string>
    <string name="activity_send_to_uri">SendToUri</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_help">Help</string>
    <string name="gesture_swipe_up">Swipe Up</string>
    <string name="gesture_swipe_down">Swipe Down</string>
    <string name="gesture_swipe_left">Swipe Left</string>
    <string name="gesture_swipe_right">Swipe Right</string>
    <string name="gesture_long_press">Long Press</string>
    <string name="gesture_hover_swipe">Swipe over</string>
    <string name="gesture_hover_hold">Hold over</string>
    <string name="dismiss">Dismiss</string>
    <string name="about_creators_title">Creators</string>
    <string name="about_creators">Jacques Dafflon\nSamantha Rosso</string>
    <string name="about_icons_title">Credits</string>
    <string name="about_icons">Touch gesture icons created by Jeff Portaro, modified by Samantha Rosso. App icon by Axis Media, modified by Samantha Rosso</string>
    <string name="pref_ip">IP</string>
    <string name="pref_port">Port</string>
    <string name="help_ip_title">Find your IP</string>
    <string name="help_ip">To communicate with your computer, enter its IP address in the settings.\nTo find your address, alt-click the Wi-Fi menu icon and look for the value next to IP Address</string>
    <string name="help_server_title">Start the server</string>
    <string name="help_server">To start the server simply run the parc_server.py script from the terminal.</string>
    <string name="ip_error">IP %s is not valid.</string>
    <string name="port_error">Port %s is not valid.</string>
    <string name="no_ip">Please configure the IP address!</string>
    <string name="action_play_pause">MKPLAY</string>
    <string name="action_mk_next">MKNEXT</string>
    <string name="action_mk_prev">MKPREV</string>
    <string name="action_volume_up">VOLU</string>
    <string name="action_volume_down">VOLD</string>
    <string name="action_volume_mute">MUTE</string>
    <string name="action_brightness_up">BRIGHTU</string>
    <string name="action_brightness_down">BRIGHTD</string>
    <string name="action_keyboard_backlight_up">KBBLU</string>
    <string name="action_keyboard_backlight_down">KBBLD</string>
    <string name="action_keyboard_backlight_toggle">KBBLT</string>
    <string name="action_computer_lock">LOCK</string>
    <string name="action_keynote_next">KNN</string>
    <string name="action_keynote_previous">KNP</string>
    <string name="action_keynote_start">KNS</string>
    <string name="action_nop">NOP</string>
    <string name="home_msg">Swipe your finger,\nlong press or\nhover over the screen\nto interact</string>
</resources>
