<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="ch.usi.inf.mc.yapt.parc.MainActivity">

    <PreferenceCategory
        android:title="Computer Configuration"
        android:layout="@layout/prefs">
        <EditTextPreference
            android:title="@string/pref_ip"
            android:summary=""
            android:key="user_ip"
            android:singleLine="true"
            android:inputType="number"
            android:digits="0123456789."
            />
        <EditTextPreference
            android:title="@string/pref_port"
            android:summary=""
            android:key="user_port"
            android:inputType="number" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="Actions"
        android:layout="@layout/prefs" >
        <ListPreference
            android:key="@string/gesture_swipe_up"
            android:title="@string/gesture_swipe_up"
            android:entries="@array/action_name_list"
            android:entryValues="@array/action_name_value"
            android:defaultValue="@string/action_volume_up"
            android:icon="@drawable/swipe_up"
            android:summary="%s"
            android:dialogIcon="@drawable/swipe_up"
            />
        <ListPreference
            android:key="@string/gesture_swipe_down"
            android:title="@string/gesture_swipe_down"
            android:entries="@array/action_name_list"
            android:entryValues="@array/action_name_value"
            android:defaultValue="@string/action_volume_down"
            android:icon="@drawable/swipe_down"
            android:summary="%s"
            android:dialogIcon="@drawable/swipe_down"
            />
        <ListPreference
            android:key="@string/gesture_swipe_right"
            android:title="@string/gesture_swipe_right"
            android:entries="@array/action_name_list"
            android:entryValues="@array/action_name_value"
            android:defaultValue="@string/action_mk_next"
            android:icon="@drawable/swipe_right"
            android:summary="%s"
            android:dialogIcon="@drawable/swipe_right"
            />
        <ListPreference
            android:key="@string/gesture_swipe_left"
            android:title="@string/gesture_swipe_left"
            android:entries="@array/action_name_list"
            android:entryValues="@array/action_name_value"
            android:defaultValue="@string/action_mk_prev"
            android:icon="@drawable/swipe_left"
            android:summary="%s"
            android:dialogIcon="@drawable/swipe_left"
            />
        <ListPreference
            android:key="@string/gesture_long_press"
            android:title="@string/gesture_long_press"
            android:entries="@array/action_name_list"
            android:entryValues="@array/action_name_value"
            android:defaultValue="@string/action_play_pause"
            android:icon="@drawable/tap"
            android:summary="%s"
            android:dialogIcon="@drawable/tap"
            />
        <ListPreference
            android:key="@string/gesture_hover_hold"
            android:title="@string/gesture_hover_hold"
            android:entries="@array/action_name_list"
            android:entryValues="@array/action_name_value"
            android:defaultValue="@string/action_computer_lock"
            android:icon="@drawable/hover"
            android:summary="%s"
            android:dialogIcon="@drawable/hover"
            />
        <ListPreference
            android:key="@string/gesture_hover_swipe"
            android:title="@string/gesture_hover_swipe"
            android:entries="@array/action_name_list"
            android:entryValues="@array/action_name_value"
            android:defaultValue="@string/action_volume_mute"
            android:icon="@drawable/hover_swipe"
            android:summary="%s"
            android:dialogIcon="@drawable/hover_swipe"
            />
    </PreferenceCategory>
</PreferenceScreen>
